@@ -191,6 +191,9 @@ Bug Fixes
 
 * SOLR-5524: Exception when using Query Function inside Scale Function.
   (Trey Grainger, yonik)
+
+* SOLR-5540: HdfsLockFactory should explicitly create the lock parent directory if 
+  necessary. (Mark Miller)
   
 Optimizations
 ----------------------
